--- a/DineEase/AdminHomePage.resx
+++ b/DineEase/AdminHomePage.resx
@@ -117,4 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="guna2ImageButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACcAAAAnCAYAAACMo1E1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAP5JREFUWEftmOEJgzAQhR3BERyhI3WEjtANdIN2M7tBR3hycAfhYVKT6tHifZA/
+        uUfykQND7LrgTADoAQwOo+e9iwAYAbzhx8gOq6iY8dpplNYzyoLaSmPgeiu2IM8L2lpBOpVvcRKcufYN
+        JTkhOcH8gYTcCiGXI+RaCTkBwO3j15zwlLM798G1HJp3kbvUCmr2eDmhVlBzPnICgKttKrJcT7EQzxu7
+        ytHJPbnOaO54uVoxQbMucrNmNokJmneRmwDceb6Em1wLIddKyLUScq2cQk5e/HY15YOVlOSSAxHyL35B
+        bwBDrqo9Rmk9Y2KXVUjwaKRT28SMn/0/F/w7C21bHtsT1DSAAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
