--- a/DineEase/view/AdminHomePage.resx
+++ b/DineEase/view/AdminHomePage.resx
@@ -121,7 +121,7 @@
   <data name="guna2ImageButton6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACcAAAAnCAYAAACMo1E1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAsJJREFUWEfdmH1RAzEQxZGABCQgAQlIQAIOwAE4AAfgAByAA3CAhGVe56V9fdns
+        EAAACxABrSO9dQAAAsJJREFUWEfdmH1RAzEQxZGABCQgAQlIQAIOwAE4AAfgAByAA3CAhGVe56V9fdns
         5Ur5A34znek1m9xmv7Lpycl/JiLOIuIiIq7kg+dzl/11IuI0Ii4j4iEivqIG409Q2Nc5KlTqZkKhER+c
         f+pr/whaCotXfMqnAuscx5IRceerk9eIuB7FFn7nOOQy7nzONHTji6/IGLpw+QomzaMvxPXXuzlRDO5Y
         pZTDLPbweHG5ksSVb9i9ywFa5Z4yeDE2hedKHrLKnItZpxQslJqeMVVx43MAQ8YVvHS5PThJzY7vIwug
@@ -139,7 +139,7 @@
   <data name="guna2ImageButton5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACcAAAAnCAYAAACMo1E1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAihJREFUWEftmOFtAjEMhRmBETpCR2AERmAENigbwAZ0hG4AGzACI3QEV6+yJffF
+        EAAACxABrSO9dQAAAihJREFUWEftmOFtAjEMhRmBETpCR2AERmAENigbwAZ0hG4AGzACI3QEV6+yJffF
         CU5y9BefFKE73yUvtnGSW61e/DMishaRjYjsReQsIhfXcH1Q+5rffRo6IAR8Sx6I3XBf3agn3oL7Jspz
         FZGTiOxEZKvPoOEa92H33KO+U2jH4IvuH90A8BhClgoXxKhYCDM++LmHOHFXvUZe3VynaVER+r6BfvNe
         9OJ0xjZb/L7z8yME/eYmS+LMY+k8yU6ABN7YHuLEGT3CkFdgz7YIEnhke0EgzmqWtapnXD4d2FYD/bmx
@@ -154,7 +154,7 @@
   <data name="guna2ImageButton4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAC8AAAAvCAYAAABzJ5OsAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAACq1JREFUaEPFmXts1FkVxy9l5zczfVIolNcKLI/lsZbXrlkTV14Bg4DRrBBjou6G
+        EAAACxABrSO9dQAACq1JREFUaEPFmXts1FkVxy9l5zczfVIolNcKLI/lsZbXrlkTV14Bg4DRrBBjou6G
         EIwEUoMgi5tYEBWNkgWio3+QXRSEQIWtGyT1j9qgBItjIo+G2paUkbY8Au10mGFK25mf+fw8t7lzO4VK
         WDnJza9zH+eee+853/O9t0o9I3Fd9y13aPKWPfZ5yjCK67of2FYOIu/LmOcrruvywZDh6XS61rYym6TT
         6X+uXbt2uFIqR8Y/H3FdF8NfUEr5XdftNI3s6+u7qYtZn06nbyilHBZs6/u/SkVFRc7s2bOdUCg0wTQw
@@ -206,7 +206,7 @@
   <data name="guna2ImageButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACcAAAAnCAYAAACMo1E1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAiBJREFUWEftmGFxAjEQhZGAhEqohEpAAhJwABJwQB20DooD6gAJSHidx2za5bGb
+        EAAACxABrSO9dQAAAiBJREFUWEftmGFxAjEQhZGAhEqohEpAAhJwABJwQB20DooD6gAJSHidx2za5bGb
         S467X+WbuRlg95KX7GaTsFg8efIHgCWANwAbAAcAX+7h9x3t+t6smKA9gAvaoB/Fvmhbk8HGAbxrz51M
         LxLAqjJT3yaaYSzPp/0ecQaw1j5GAWCrrVsHFLFUf4/N9tr8la36d5EI26lfCzYYZZxAG7GHo39Vvx74
         fjCLK/WrYuHwjfDzJIkctM1cbm87WJXdM2Ylh6uTEbjJTZtBz8HbU2xknu4cC3L1FAjUHBwu2DJrZ7UP
@@ -221,7 +221,7 @@
   <data name="guna2ImageButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAf9JREFUaEPtmUtKA0EQhuPGY6go4j2S6IVcBHWTTUQEtz7O4tZjBI16AR+LGAh8
+        EAAACxABrSO9dQAAAf9JREFUaEPtmUtKA0EQhuPGY6go4j2S6IVcBHWTTUQEtz7O4tZjBI16AR+LGAh8
         UqQ6NMXE6ZmaPJD+YGDIXz31V09PN+lutTKZTGajAfaAB+AdmAJjYBDpl/pbjCdGckiue2A36LUAToAv
         k1j4Vn1L7q2oNBHzCXStryS054vM254bJPRu3RhBitgJccnosAk8A21g28Y1jeQAOsBLlP/OxpWi4zDQ
         tvqy0SICr1YvRT+mwNJ73qJvIjC1einReBxbbVW4POhHJTPD/ENbNZvgIVMb4Ab4Aa6tlgJwBLwBI+DQ
@@ -236,7 +236,7 @@
   <data name="guna2ImageButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACcAAAAnCAYAAACMo1E1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAAAP5JREFUWEftmOEJgzAQhR3BERyhI3WEjtANdIN2M7tBR3hycAfhYVKT6tHifZA/
+        DgAACw4BQL7hQQAAAP5JREFUWEftmOEJgzAQhR3BERyhI3WEjtANdIN2M7tBR3hycAfhYVKT6tHifZA/
         uUfykQND7LrgTADoAQwOo+e9iwAYAbzhx8gOq6iY8dpplNYzyoLaSmPgeiu2IM8L2lpBOpVvcRKcufYN
         JTkhOcH8gYTcCiGXI+RaCTkBwO3j15zwlLM798G1HJp3kbvUCmr2eDmhVlBzPnICgKttKrJcT7EQzxu7
         ytHJPbnOaO54uVoxQbMucrNmNokJmneRmwDceb6Em1wLIddKyLUScq2cQk5e/HY15YOVlOSSAxHyL35B
@@ -245,5 +245,8 @@
   </data>
   <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
   </metadata>
 </root>
